assets/css/style.css
/* ... */
body {
background: #fff none repeat scroll 0 0;
color: #777;
font-family: "Open Sans",sans-serif;
font-size: 15px;
font-weight: 400;
line-height: 26px;
}
.main-message {
    color: #535353;
    font-weight: 600;
    font-size: 21px;

}

.grey-font {
    color: #777777;
    font-weight: 600;
    font-size: 17px;
}

.black-font {
    color: #434343;
    font-weight: 600;
    font-size: 17px;
}
html,
body { height: 100% }
h1,
h2,
h3,
h4,
h5,
h6 {
  letter-spacing: 0px;
  margin-top: 0px;
  font-family: "Dosis", sans-serif;
  color: #333;
  font-weight: 400;
}
a {
    text-decoration: none;
    -webkit-transition: all 0.2s;
    transition: all 0.2s;
}
a:hover {
    color: #fff;
    text-decoration: none;
}

a.map_a:hover {
    color: #A39168;
    text-decoration: underline;
}

a.map_a {
    color: #A39168;
    text-decoration: none;
}
a:focus {
    outline: none;
    text-decoration: none;
}
p {
    margin-bottom: 0;
}
ul,
li {
    margin: 0;
    padding: 0;
}
fieldset {
    border: 0 none;
    margin: 0 auto;
    padding: 0;
}
/*START PRELOADER DESIGN*/
.preloader {
    background: #fff;
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 99999;
}

.status-mes {
    width: 80px;
    height: 80px;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -40px 0 0 -40px;
    font-size: 10px;
    text-indent: -12345px;
    border-top: 2px solid rgba(0, 0, 0, 0.08);
    border-right: 2px solid rgba(0, 0, 0, 0.08);
    border-bottom: 2px solid rgba(0, 0, 0, 0.08);
    border-left: 2px solid #000;
    border-radius: 50%;
    -webkit-animation: spinner 700ms infinite linear;
    animation: spinner 700ms infinite linear;
    z-index: 10000;
}

@-webkit-keyframes spinner {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

@keyframes spinner {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
.no-padding { padding: 5px }
/*END PRELOADER DESIGN*/
.section-padding { padding:60px 0 }
/*START SECTION TITLE DESIGN*/
.section-title { margin-bottom: 30px }
.section-title-tinner{ margin-bottom: 15px; padding-top: 40px; }
.margin-bottom-20 { margin-bottom: 20px }
.section-title  h2 {
font-weight: 500;
letter-spacing: 2px;
margin-top: 0;
text-transform: capitalize;
}
.section-title-pade {
    padding-top: 40px;
}
.section-title span {
background: #a8a8a8 none repeat scroll 0 0;
display: block;
height: 2px;
margin: 20px auto 0;
overflow: hidden;
width: 50px;
}
/*END SECTION TITLE DESIGN*/
/*START SCROLL TO TOP*/
.topcontrol {
background: #A39168 none repeat scroll 0 0;
border-radius: 5px;
bottom: 5px;
box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
color: #fff;
cursor: pointer;
font-size: 22px;
height: 35px;
line-height: 33px;
opacity: 1;
position: fixed;
right: 5px;
text-align: center;
transition: all 0.2s ease 0s;
width: 35px;
}
.topcontrol:hover {
    background: #222;
    color: #fff;
}
/*END SCROLL TO TOP*/
/*
* ----------------------------------------------------------------------------------------
* 01.END GENERAL STYLE
* ----------------------------------------------------------------------------------------
*/


/*
* ----------------------------------------------------------------------------------------
* 02.START BOOTSTRAP NAVIGATION OVERRIDES
* ----------------------------------------------------------------------------------------
*/

.navbar-default {
background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
border: medium none;
border-radius: 0;
margin-bottom: 0;
padding: 10px 0;
transition: all 0.4s ease-in-out 0s;
width: 100%;
}
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>.active>a{
    color: #A39168 !important;
    background-color: transparent;
    font-weight: bold;
}
.navbar-default .navbar-nav>.active>a:hover:focus,
.navbar-default .navbar-nav>.active>a:hover {
    color: #A39168 !important;
    background-color: transparent;
    font-weight: bold;
    text-decoration: underline;
}
.navbar-default .navbar-nav>.open>a,
.navbar-default .navbar-nav>.open>a:hover,
.navbar-default .navbar-nav>.open>a:focus {
    color: #171717 !important;
    background-color: transparent;
}
.navbar-brand { padding: 0px }
.navbar-brand img {width: 100px;}
@media only screen and (max-width:768px) {
    .single_address { margin-left: 10px; }
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form { border-color: #fff }
.menu-top li a {
color: #fff !important;
font-family: "Dosis",sans-serif;
font-size: 1.2rem;
font-weight: 500;
letter-spacing: 4px;
text-transform: uppercase;
}
.menu-top li a:hover { color: #A39168!important; text-decoration: underline }
@media only screen and (max-width:768px) {
    .navbar-default .navbar-nav > li > a {
        margin-top: 10px;
        padding: 8px;
    }
}
@media only screen and (max-width:480px) {
    .menu-top { background-color: #fff }
    .navbar-default .navbar-nav > li > a { color: #313131  !important }
}
.navbar-default.menu-shrink {
background:#fff;
padding: 10px 0;
width: 100%;
 margin-top:0px
}
@media only screen and (max-width:480px) {
    .menu-top {
        color: #fff !important;
        margin-left: 0px;
    }
}
.navbar-default.menu-shrink li a {color: rgba(0, 0, 0, 0.6) !important; }
.navbar-default.menu-shrink li a:hover { color: #A39168 !important; text-decoration: underline }
.navbar-default .navbar-toggle { background: #fff none repeat scroll 0 0 }
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus { background-color: #fff }
.navbar-default .navbar-toggle .icon-bar { background-color: #A39168 }
/* ... */

